--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pyDWS"
-version = "0.3.0"
+version = "0.4.0"
 description = "A Python package for the analysis of Diffusing Wave Spectroscopy and tracer bead microrheology data."
 authors = [
     { name="M. Helfer, C. Zhang, and F. Scheffold", email="frank.scheffold@unifr.ch" }
@@ -13,11 +13,11 @@ readme = { file = "README.md", content-type = "text/markdown" }
 license = {text = "MIT"}
 requires-python = ">=3.10"
 dependencies = [
-    "numpy>=2.3.2",
-    "matplotlib>=3.10.5",
-    "pandas>=2.3.1",
-	"scikit_learn>=1.7.1",
-	"scipy>=1.16.1",
+    "numpy>=1.21.0",
+    "matplotlib>=3.4.3",
+    "pandas>=1.3.0",
+	"scikit_learn>=1.0.0",
+	"scipy>=1.7.0",
 	"statsmodels>=0.14.5"
 ]
 
@@ -34,3 +34,4 @@ pyDWS = ["*.mplstyle"]
 [project.urls]
 "Homepage" = "https://github.com/ManuelH26/pyDWS"
 "Bug Tracker" = "https://github.com/ManuelH26/pyDWS/issues"
+"Source Code" = "https://github.com/ManuelH26/pyDWS"
